--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <script
@@ -116,7 +116,7 @@
       <h2><span>Input Akun</span> Anda</h2>
       <p>MASUKAN AKUN DAN NOMOR HP ANDA...</p>
       <div class="row">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1896.2620927926835!2d115.09803651428183!3d-8.115860119329904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd190a6a10e3651%3A0xb5d9c3d1b9fbe5fc!2sSMK%20Negeri%203%20Singaraja!5e0!3m2!1sid!2sid!4v1719065110094!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d505204.5650437214!2d114.82353113943407!3d-8.410434738725792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd21665cef49255%3A0x1abe2912c8d6af5a!2sUniversitas%20Pendidikan%20Ganesha!5e0!3m2!1sid!2sid!4v1719578791488!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         <form action="">
           <div class="input-group">
@@ -141,9 +141,6 @@
       <h2><span>About</span> Me</h2>
 
       <div class="row">
-        <div class="about-img">
-          <img src="img/about-me.jpg" alt="About Me" />
-        </div>
         <div class="content">
           <h3>Kenapa memilih top up di store kami ?</h3>
           <p>
@@ -163,22 +160,15 @@
     <!-- Footer start -->
     <footer>
       <div class="socials">
-        <a href="https://www.instagram.com/genard_ad/"
+        <a href="https://www.instagram.com/ganggaswaraa?igsh=NTc4MTIwNjQ2YQ=="
           ><i data-feather="instagram"></i
         ></a>
         <a href="#"><i data-feather="twitter"></i></a>
         <a href="#"><i data-feather="facebook"></i></a>
       </div>
 
-      <div class="links">
-        <a href="#home">Home</a>
-        <a href="#menu">Menu Top Up</a>
-        <a href="#attach">Payment</a>
-        <a href="#about">About me</a>
-      </div>
-
       <div class="credit">
-        <p>Created by <a href=""><H1>Gangga</H1></a>. | &copy; 2024</p>
+        <p>Created by <a href=""><H1>ARGALEN</H1></a>. | &copy; 2024</p>
       </div>
     </footer>
     <!-- Footer end -->
