--- a/index.html
+++ b/index.html
@@ -160,9 +160,8 @@
     <!-- Footer start -->
     <footer>
       <div class="socials">
-        <a href="https://www.instagram.com/ganggaswaraa?igsh=NTc4MTIwNjQ2YQ=="
-          ><i data-feather="instagram"></i
-        ></a>
+        <a href="https://www.instagram.com/ganggaswaraa?igsh=NTc4MTIwNjQ2YQ=="><i data-feather="instagram"></i></a>
+       <a href="https://x.com/GCryptSuperFans?t=k71w5obYlsCrn6JBGiuVZw&s=09"><i data-feather="twitter"></i></a>
       </div>
 
       <div class="credit">
